@startuml
hide empty members
hide circle
skinparam ArrowColor #333
skinparam ArrowThickness 1.5
skinparam ClassBackgroundColor White-APPLICATION
skinparam ClassBorderColor LightSlateGray
skinparam ClassBorderThickness 1
skinparam MinClassWidth 150
skinparam LineType Ortho
skinparam Shadowing false
skinparam PackageBackgroundColor #eee
skinparam PackageBorderColor #eee
skinparam PackageFontStyle normal
title db-draw
entity Assistant {
}
entity Course {
}
entity CreditCard {
}
entity Faculty {
}
entity Inscription {
}
entity Person {
}
entity Session {
}
entity Student {
}
entity Teacher {
}
entity inscription_session {
}
Assistant |o--|| Person
Course }o--o| Faculty
Course }o--o| Course
Inscription }o--|| Student
Session }o--|| Teacher
Session }o--|| Course
Session }o--o| Assistant
Student |o--o| CreditCard
Student |o--|| Person
Teacher |o--|| Person
inscription_session }o--|| Inscription
inscription_session }o--|| Session
@enduml
